fixed styling on smaller devices

--- a/frontend/src/assets/css/home.css
+++ b/frontend/src/assets/css/home.css
@@ -29,10 +29,30 @@ color: black;
   .centered {
     position: absolute;
     top: 50%;
-    padding: 30px;
+    padding: 30px 90px;
     color: white;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: black;
     border: 1px solid #b49898;
   }
+
+  @media screen and (max-width: 1200px) {
+.centered{
+  width: 90vw;
+}
+.swiper-container-wrapper{
+  display: none;
+}
+  }
+
+  @media screen and (max-width: 1200px) {
+    .centered{
+     padding: 10px 5px;
+     font-size: .8rem;
+     line-height: 25px;
+     
+    }
+      }
+    
+      
